--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,19 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	margin-bottom: -75px;
 }
 
+.desktopView{
+	display: none;
+}
+
 /* Footer */
 footer{
 	background-color: black;
 	height: 75px;
 	color: white;
+	width: 100vw;
+	display: flex;
+	justify-content: space-between;
+	font-style: italic;
 }
 
 #footerLeft{
@@ -33,6 +41,7 @@ footer{
 	align-items: center;
 	justify-content: space-evenly;
 	height: 75px;
+	width: 100vw;
 }
 
 #footerRight i{
@@ -113,4 +122,217 @@ main .mobileView .bannerText p{
 	font-size: 2.5rem;
 	text-transform: capitalize;
 }
+
+/* ===================================== */
+
+/* Changing promotion */
+@media screen and (min-width: 400px){
+/* Desktop View */
+.mobileView{
+	display: none;
+}
+
+.desktopView{
+	display: block;
+}
+
+/* Footer */
+#footerLeft{
+display:flex;
+align-items: flex-end;
+
+margin-left: 5px;
+margin-bottom: 10px;
+}
+
+#footerRight{
+width: 30vw;
+}
+
+/* Header */
+header{
+	display: block;
+	width: 100vw;
+	height: 130px;
+	background-color: black;
+}
+
+.warning{
+	height: 40px;
+	color: white;
+	font-size: 14px;
+	text-align: center;
+	padding: 0.5em;
+	background-color: grey;
+}
+
+.navBar{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	height: 90px;
+}
+
+#navLeft{
+	margin-left: 4rem;
+}
+
+#navLeft img {
+	border-radius: 5px;
+}
+
+#navRight{
+	margin-right: 4rem;
+}
+
+#navRight img{
+	border-radius: 5px;
+}
+
+#navMiddle{
+	display: flex;
+}
+
+nav ul li a{
+	text-decoration: none;
+	color: white;
+	font-weight: bold;
+	display: inline-block;     
+  position: relative;    
+  z-index: 1;     
+  padding: 1.1em 2em;     
+  margin: -2em;
+}
+
+nav ul li{
+	background-color: rgb(218, 26, 50);
+	margin: 0px 2rem;
+	padding: 8px 15px;
+	border-radius: 10px;
+	min-width: 100px;
+	text-align: center;
+	list-style-type: none;
+	transition: 0.2s ease-in-out;
+	text-shadow: 5px 3px 2px rgb(122, 77, 82);
+}
+
+nav ul li:hover{
+	transform: scale(1.1);
+	background-color: rgb(218, 26, 50, 0.8);
+}
+
+/* Body */
+
+#bannerPromo{
+position: relative;
+display: block;
+top: 100px;
+left: 65vw;
+width: 375px;
+height: 250px;
+border-radius: 10px;
+border: 3px solid black;
+box-shadow: rgb(0, 0, 0, 0.8) 0px 5px 10px;
+transition: 0.2s ease-in-out;
+}
+
+#bannerPromo:hover{
+cursor: pointer;
+transform: scale(1.05);
+border: 4px solid black;
+box-shadow: rgb(0, 0, 0, 1) 0px 6px 12px;
+}
+
+.bannerText{
+	position: relative;
+	display: inline-block;
+	width: 375px;
+	top: 200px;
+	left: 65vw;
+	text-align: center;
+	color: rgb(218, 26, 50);
+	text-shadow: 3px 2px 1px rgb(122, 77, 82, 0.3);
+	font-weight: bold;
+}
+
+.bannerText h1{
+	font-size: 2em;
+	text-transform: capitalize;
+}
+
+.bannerText{
+	font-size: 1.25em;
+	text-transform: capitalize;
+}
+
+.order{
+	position: relative;
+	width: 600px;
+	top: 250px;
+	margin: auto;
+
+	border: 4px solid black;
+	border-radius: 10px;
+	box-shadow: 0px 10px 8px 5px rgba(0, 0, 0, 0.4);
+	font-size: 15px;
+	padding: 1em;
+	background-color: white;
+}
+
+.order h1{
+
+color: rgb(218, 26, 50);
+margin-bottom: 0.5em;
+}
+
+.order h2, p{
+	line-height: 1.5em;
+}
+
+.order form{
+	border: 1px solid black;
+	width: 100%;
+	padding: 1em 0;
+	border-radius: 5px;
+}
+
+.order a{
+	margin: 5px 0px;
+}
+
+.order form input{
+	width: 60%;
+	border: 1px solid lightblue;
+	border-radius: 5px;
+	margin-left: 10px;
+	margin-right: 0px;
+}
+
+.order form input::placeholder{
+	font-weight: bold;
+	color: lightgray;
+}
+
+.order button{
+	background-color: rgb(62, 158, 62);
+	color: white;
+	font-weight: bold;
+	border: none;
+	border-radius: 5px;
+	margin: none;
+	cursor: pointer;
+}
+
+.order form input, button{
+	padding: 1em;
+}
+
+.order button:hover{
+transform: scale(1.05);
+}
+
+}
+
+
 
