--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,8 @@ box-shadow: rgb(0, 0, 0, 1) 0px 6px 12px;
 .order{
 	position: relative;
 	width: 600px;
-	top: 250px;
+	top: 120px;
+	bottom: 250px;
 	margin: auto;
 
 	border: 4px solid black;
